# phab-migration-tools

./: .gitignore  .golangci.yml  README.md  bugs.py  docker-compose.yml  getIDS.go  getToken.go  go.mod  go.sum  main.go  oldmain.go  oldmain.go.bak  taskfile.yml  unique_components.sh
contrib/blender/python/: .env.dist  .gitignore  README.md  import-all.py  pt.dump.maniphest  pt.dump.maniphest.all  pt.py  pyproject.toml  requirements.txt  reset-convert-except-blender-git.sh  reset-gitea.sh  test.sh
contrib/blender/python/phab_tool/: __init__.py  common.py  debug.py  dump.py  gitea.py  gitea_api_README.md  parallel.py  users.py
contrib/blender/python/phab_tool/convert/: __init__.py  blender_id.py  callsign_map.py  gitea_projects.py  gitea_types.py  gitea_users.py  heuristics.py  markup_processor.py  orgs_and_repos.py  paths.py  phab_tasks.py  projects.py  tracability.py  transactions.py  user_mapping.py
contrib/blender/python/phab_tool/gitea_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
contrib/blender/python/phab_tool/gitea_api/api/: __init__.py  activitypub_api.py  admin_api.py  issue_api.py  miscellaneous_api.py  notification_api.py  organization_api.py  package_api.py  repository_api.py  settings_api.py  user_api.py
contrib/blender/python/phab_tool/gitea_api/apis/: __init__.py
contrib/blender/python/phab_tool/gitea_api/docs/: APIError.md  (+169 more)
contrib/blender/python/tests/: test_heuristics.py  test_markup_processor.py  test_projects.py  test_users.py  test_yaml.py
contrib/blender/python/website/: website.py
(+399 files in other folders)
