[project]
name = "python-migration-tool"
version = "0.161"

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

# Ignore errors in generated code.
[[tool.mypy.overrides]]
module = 'phab_tool.gitea_api.*'
ignore_errors = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]

[tool.black]
extend-exclude = "phab_tool/gitea_api"

[tool.setuptools]
py-modules = ["phab_tool"]
